Added filtering, Add SQLite Connection?